--- a/index.html
+++ b/index.html
@@ -1,206 +1,242 @@
-<!DOCTYPE html>　<!-- XXXXXXXXXX　-->
-<html lang="ja">　<!-- XXXXXXXXXX　-->
+<!DOCTYPE html>
+<html lang="ja">
 
 <head>
-  <meta charset="UTF-8">　<!-- XXXXXXXXXX　-->
+  <meta charset="UTF-8">
   <title>SHOP LOGO</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 
 <body>
-  <!-------------------------------
-    以下header
-  -------------------------------->
+  <!-- header　-->
   <header>
-    <div class="hdr-inr">
-      <h1 class="header" href="#">
-        <a class="headerA" href="#">SHOP LOGO</a>
-      </h1>
-      <nav class="header">
-        <ul class="header">
-            <li class="header"><a class="header" href="#">menu</a></li>
-            <li class="header"><a class="header" href="#">menu</a></li>
-            <li class="header"><a class="header" href="#">menu</a></li>
-            <li class="header"><a class="header" href="#">menu</a></li>
-            <li class="header"><a class="header" href="#">menu</a></li>
-            <li class="header"><a class="headerX" href="#"><i class="far fa-envelope fa-2x"></i></a></li>
+    <!-- header：PC-->
+    <div class="header">
+      <div class="header_inner">
+        <h1><a href="#">SHOP LOGO</a></h1>
+        <ul>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#"><i class="far fa-envelope"></i></a></li>
         </ul>
-      </nav>
+      </div>
+    </div>
+    
+    <!-- header：SP　-->
+    <div class="header_SP">
+      <div class="header_inner_SP">
+        <h1><a href="#">SHOP LOGO</a></h1>
+        <i class="fas fa-list"><a href="#">MENU</a></i>
+      </div>
     </div>
   </header>
+  
 
-  <div class="mainimage">
-    <div class="mainimage-txt">
-        <h2 class="mainimage-txt">Lorem Ipsum</h2>
-        <p class="mainimage-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-        </p>
-      </div>
-  </div>
-
-  <div class="greeting">
-    <div class="greeting-txt">
-      <h2 class="greeting-txt">Greeting</h2>
-      <p class="greeting-txt">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br>
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum<br>
-        suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel<br>
-        facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-        tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices<br>
-        gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+  <!-- main：イメージ1　-->
+  <div class="main_img1">
+    <div class="main_img1_txt">
+      <h2>Lorem Ipsum</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
+        tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-<br>
+        pendisse ultrices gravida. Risus commodo viverra maecenas accumsan<br>
+        lacus vel facilisis.
       </p>
-    </div>
-</div>
-
-<div class="card-all">
-  <div class="card-set1">
-    <div class="card">
-        <div class="card-img1">
-          <img src="images/card_img.png" alt="card-img">
-        </div>
-        <div class="card-txt">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
-        </div>
-        <div class="card-btn">
-          <a class="card-btnX" href="#"><i class="fas fa-angle-double-right"></i></a>
-        </div>
-    </div>
-
-    <div class="card">
-      <div class="card-img1">
-        <img src="images/card_img.png" alt="card-img">
-      </div>
-      <div class="card-txt">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
-      </div>
-      <div class="card-btn">
-        <a class="card-btnX" href="#"><i class="fas fa-angle-double-right"></i></a>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-img1">
-        <img src="images/card_img.png" alt="card-img">
-      </div>
-      <div class="card-txt">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
-      </div>
-      <div class="card-btn">
-        <a class="card-btnX" href="#"><i class="fas fa-angle-double-right"></i></a>
-      </div>
-    </div>
+    </div>  
   </div>
 
-  <div class="card-set2">
-    <div class="card">
-        <div class="card-img2">
-          <img src="images/card_img.png" alt="card-img">
-        </div>
-        <div class="card-txt">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
-        </div>
-        <div class="card-btn">
-          <a class="card-btnX" href="#"><i class="fas fa-angle-double-right"></i></a>
-        </div>
-    </div>
-
-    <div class="card">
-      <div class="card-img2">
-        <img src="images/card_img.png" alt="card-img">
-      </div>
-      <div class="card-txt">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
-      </div>
-      <div class="card-btn">
-        <a class="card-btnX" href="#"><i class="fas fa-angle-double-right"></i></a>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-img2">
-        <img src="images/card_img.png" alt="card-img">
-      </div>
-      <div class="card-txt">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
-      </div>
-      <div class="card-btn">
-        <a class="card-btnX" href="#"><i class="fas fa-angle-double-right"></i></a>
-      </div>
-    </div>
+<!-- main：イメージ2　-->
+<div class="main_img2">
+  <div class="main_img2_txt">
+    <h2>Greeting</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br>
+      eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum<br>
+      suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel<br>
+      facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
+      tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices<br>
+      gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+    </p>
   </div>
 </div>
 
-<div class="shop-info">
-  <div class="shop-info-left-new">
-    <div class="shop-info-left">
-        <ul class="shop-info-left">
-          <h4 class="shop-info-left">SHOPLOGO</h4>
-          <li>
-            <dl class="shop-info-left">
-              <dt class="shop-info-left">ADDRESS</dt>
-              <dd class="shop-info-left">Lorem Ipsum1-1-1</dd>
-            </dl>
-          </li>
-          <li>
-            <dl class="shop-info-left">
-              <dt class="shop-info-left">PHONE</dt>
-              <dd class="shop-info-left">(000)000-0000</dd>
-            </dl>
-          </li>
-          <li>
-            <dl class="shop-info-left">
-              <dt class="shop-info-left">OPENING HOURS</dt>
-              <dd class="shop-info-left">9:00-19:30</dd>
-            </dl>
-          </li>
-          <li>
-            <dl class="shop-info-left">
-              <dt class="shop-info-left">PARKING</dt>
-              <dd class="shop-info-left">10 parking spaces</dd>
-            </dl>
-          </li>
-          <li>
-            <dl class="shop-info-left">
-              <dt class="shop-info-left">CREDIT CARD</dt>
-              <dd class="shop-info-left">VISA,MASTER,UC,American Express</dd>
-            </dl>
-          </li>
-        </ul>
-    </div>
+  <!-- main：カードエリア　-->
+<div class="card_area">
+  <div class="card">
+    <img src="images/card_img.png">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
+    <a href="#"><i class="fas fa-angle-double-right"></i></a>
   </div>
 
-  <div class="shop-info-right">
-    <!-- 以下header　-->
+  <div class="card">
+    <img src="images/card_img.png">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
+    <a href="#"><i class="fas fa-angle-double-right"></i></a>
+  </div>
+
+  <div class="card">
+    <img src="images/card_img.png">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
+    <a href="#"><i class="fas fa-angle-double-right"></i></a>
+  </div>
+
+  <div class="card">
+    <img src="images/card_img.png">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
+    <a href="#"><i class="fas fa-angle-double-right"></i></a>
+  </div>
+
+  <div class="card">
+    <img src="images/card_img.png">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
+    <a href="#"><i class="fas fa-angle-double-right"></i></a>
+  </div>
+
+  <div class="card">
+    <img src="images/card_img.png">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>	
+    <a href="#"><i class="fas fa-angle-double-right"></i></a>
   </div>
 </div>
 
+<!-- main：ショップインフォ：PC　-->
+<div class="shop_info">
+  <div class="shop_info_left"> 
+    <ul>
+      <h3>SHOPLOGO</h3> 
+      <li>
+        <dl>
+          <dt>ADDRESS</dt>
+          <dd>Lorem Ipsum1-1-1</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt>PHONE</dt>
+          <dd>(000)000-0000</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt>OPENING HOURS</dt>
+          <dd>9:00-19:30</dd>
+        </dl>
+      </li>
+      <li>
+        <dl>
+          <dt>PARKING</dt>
+          <dd>10 parking spaces</dd>
+        </dl>
+      </li>
+      <li>
+        <dl class>
+          <dt>CREDIT CARD</dt>
+          <dd>VISA,MASTER,UC,American Express</dd>
+        </dl>
+      </li>
+    </ul>
+  </div>
+  <div class="shop_info_right">
+  </div>
+</div>
 
+<!-- main：ショップインフォ：PC　-->
+<div class="shop_info_SP">   
+  <ul>
+    <h3>SHOPLOGO</h3>
+    <li>
+      <dl>
+        <dt>ADDRESS</dt>
+        <dd>Lorem Ipsum1-1-1</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>PHONE</dt>
+        <dd>(000)000-0000</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>OPENING HOURS</dt>
+        <dd>9:00-19:30</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>PARKING</dt>
+        <dd>10 parking spaces</dd>
+      </dl>
+    </li>
+    <li>
+      <dl class>
+        <dt>CREDIT CARD</dt>
+        <dd>VISA,MASTER,UC,American Express</dd>
+      </dl>
+    </li>
+  </ul>
+</div>
+
+<!-- footer　-->
 <footer>
+  <!-- footer：PC-->
   <div class="footer">
-    <div class="footer-box1">
-      <h3 class="footer-box1">SHOP LOGO</h3>
-      <p class="footer-box1">Lorem Ipsum1-1-1</p>
-      <div class="footer-box1-txt-img">
-        <img class="footer-box1" src="images/tell.png" alt="more" style="vertical-align: middle;">
-        <p class="footer-box1">(000)000-0000</p>
+    <div class="footer_innner">
+      <div class="footer_box1">
+        <h3>SHOP LOGO</h3>
+        <p>Lorem Ipsum1-1-1</p>
+        <div class="footer_box1_flex">
+          <img src="images/tell.png" style="vertical-align: middle;">
+          <p>(000)000-0000</p>
+        </div>
+        <a href="#"><i class="fas fa-map-marker-alt"></i></a>
       </div>
-      <a class="footer-btnX" href="#"><i class="fas fa-map-marker-alt"></i></a>
-    </div>
-    <div class="footer-box2">
-      <nav class="footer-box2">
-        <ul class="footer-box2" style="padding-inline-start: 0px;margin-block-start: 0em;margin-block-end: 0em;">
-          <li class="footer-box2"><a class="footer-box2" href="#">menu</a></li>
-          <li class="footer-box2"><a class="footer-box2" href="#">menu</a></li>
-          <li class="footer-box2"><a class="footer-box2" href="#">menu</a></li>
-          <li class="footer-box2"><a class="footer-box2" href="#">menu</a></li>
-          <li class="footer-box2"><a class="footer-box2" href="#">menu</a></li>
-          <li class="footer-box2"><a class="footer-box2" href="#">menu</a></li>
+      <div class="footer_box2">
+        <ul style="padding-inline-start: 0px;margin-block-start: 0em;margin-block-end: 0em;">
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
         </ul>
-      </nav>
+      </div>
+      <div class="footer_box3">
+      　　<small>copyright 2019 coding training psd.</small>
+      </div>
     </div>
-    　　<small class="footer-box3">copyright 2019 coding training psd.</small>
+  </div>
+  <!-- footer：SP-->
+  <div class="footer_SP">
+    <div class="footer_inner_SP">
+      <div class="footer_box1">
+        <h3>SHOP LOGO</h3>
+        <p>Lorem Ipsum1-1-1</p>
+        <div class="footer_box1_flex">
+          <img src="images/tell.png" style="vertical-align: middle;">
+          <p>(000)000-0000</p>
+        </div>
+        <a href="#"><i class="fas fa-map-marker-alt"></i></a>
+      </div>
+      <div class="footer_box2">
+        <ul style="padding-inline-start: 0px;margin-block-start: 0em;margin-block-end: 0em;">
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+          <li><a href="#">MENU</a></li>
+        </ul>
+      </div>
+      <div class="footer_box3">
+      　　<small>copyright 2019 coding training psd.</small>
+      </div>
+    </div>
   </div>
 </footer>
-
 </body>
 </html>
