--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>SHOP LOGO</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
   </header>
   
 
-  <!-- main：イメージ1　-->
+  <!-- main：イメージ1：PC　-->
   <div class="main_img1">
     <div class="main_img1_txt">
       <h2>Lorem Ipsum</h2>
@@ -49,7 +50,20 @@
     </div>  
   </div>
 
-<!-- main：イメージ2　-->
+    <!-- main：イメージ1：SP　-->
+    <div class="main_img1_SP">
+      <div class="main_img1_txt_SP">
+        <h2>Lorem Ipsum</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-
+          pendisse ultrices gravida. Risus commodo viverra maecenas accumsan
+          lacus vel facilisis.
+        </p>
+      </div>  
+    </div>
+
+<!-- main：イメージ2：PC　-->
 <div class="main_img2">
   <div class="main_img2_txt">
     <h2>Greeting</h2>
@@ -59,6 +73,20 @@
       suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel<br>
       facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
       tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices<br>
+      gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+    </p>
+  </div>
+</div>
+<!-- main：イメージ2：SP　-->
+<div class="main_img2_SP">
+  <div class="main_img2_txt_SP">
+    <h2>Greeting</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+      eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum
+      suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+      facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
       gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
     </p>
   </div>
