--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="./script/script.js"></script>
 </head>
 
 <body>
@@ -31,7 +33,22 @@
     <div class="header_SP">
       <div class="header_inner_SP">
         <h1><a href="#">SHOP LOGO</a></h1>
-        <i class="fas fa-list"><a href="#">MENU</a></i>
+        <!-- ナビメニュー部分 -->
+        <nav class="NavMenu">
+          <ul>
+            <li><a href="#">Menu1</a></li>
+            <li><a href="#">Menu2</a></li>
+            <li><a href="#">Menu3</a></li>
+            <li><a href="#">Menu4</a></li>
+            <li><a href="#">Menu5</a></li>
+          </ul>
+          </nav>
+        <!-- ハンバーガーメニュー部分 --> 
+        <div class="Toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </div>
     </div>
   </header>
